--- a/tests/domino-48/index.html
+++ b/tests/domino-48/index.html
@@ -32,8 +32,7 @@
             width: 100%;
             height: 100%;
             background-image:
-                linear-gradient(rgba(88, 19, 31, 0.85), rgba(58, 6, 21, 0.85)),
-                url('../../img/fondo-escencial.jpg');
+                url('../../img/one-fondograndecolor.jpg');
             background-size: 100% 100%;
             background-position: center center;
             background-repeat: no-repeat;
@@ -59,7 +58,7 @@
             right: 16px;
             left: auto;
             transform: translateX(0);
-            background-image: url('../../img/logo-escencial.png');
+            background-image: url('../../img/one-logocolor.png');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
