--- a/tests/eneagramaprofesional/index.html
+++ b/tests/eneagramaprofesional/index.html
@@ -22,7 +22,7 @@
             min-height: 100vh;
             padding: 24px;
             /* RUTA ACTUALIZADA */
-            background-image: url('../../img/fondo-escencial.jpg');
+            background-image: url('../../img/one-fondograndecolor.jpg');
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -489,10 +489,19 @@
         @media print {
             .btn-back { display: none !important; }
         }
+
+.one-logocolor {
+        display: block;
+        width: 250px;             /* Ancho fijo de 250px */
+        height: auto;             /* Altura automática para no deformar */
+        margin: 0 auto 20px auto; /* Centrado y separado del título de abajo */
+        object-fit: contain;
+    }
+
     </style>
 
     <div class="container">
-        <img src="../../img/logo-escencial.png" alt="Logo Escencial" class="logo">
+        <img src="../../img/one-logocolor.png" alt="one-logocolor" class="one-logocolor">
 
         <div id="registrationScreen">
             <h1>Test de Eneagrama Profesional</h1>
