--- a/tests/big-five/index.html
+++ b/tests/big-five/index.html
@@ -26,7 +26,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
             min-height: 100vh;
             padding: 24px;
-            background-image: url(../../img/fondo-escencial.jpg);
+            background-image: url(../../img/one-fondograndecolor.jpg);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -641,7 +641,7 @@
         <!-- PANTALLA DE INTRODUCCIÓN -->
         <div id="intro">
             <div style="text-align: center; margin-bottom: 30px;">
-                <img src="../../img/logo-escencial.png" alt="Logo" style="max-width: 300px; height: auto;">
+                <img src="../../img/one-logocolor.png" alt="one-logocolor" style="max-width: 150px; height: auto;">
             </div>
             <h1>Test de Personalidad Big Five</h1>
             <p class="subtitle">Versión IPIP-50 Validada Científicamente</p>
@@ -725,7 +725,7 @@
         <!-- PANTALLA DEL TEST -->
         <div id="test" class="hidden">
             <div style="text-align: center; margin-bottom: 20px;">
-                <img src="../../img/logo-escencial.png" alt="Logo" style="max-width: 250px; height: auto;">
+                <img src="../../img/one-logocolor.png" alt="one-logocolor" style="max-width: 200px; height: auto;">
             </div>
             <h2>Test de Personalidad Big Five</h2>
 
@@ -755,7 +755,7 @@
         <!-- PANTALLA DE RESULTADOS -->
         <div id="results" class="hidden">
             <div style="text-align: center; margin-bottom: 30px;">
-                <img src="../../img/logo-escencial.png" alt="Logo" style="max-width: 300px; height: auto;">
+                <img src="../../img/one-logocolor.png" alt="one-logocolor" style="max-width: 200px; height: auto;">
             </div>
             <h1>📊 Tus Resultados del Big Five (IPIP-50)</h1>
             <p class="subtitle">Test validado científicamente</p>
@@ -842,6 +842,7 @@
                 <button class="btn" onclick="restartTest()">🔄 Realizar el Test Nuevamente</button>
             </div>
         </div>
+    
     </div>
 
     <script>
