--- a/tests/dnla-personal-insight/index.html
+++ b/tests/dnla-personal-insight/index.html
@@ -22,7 +22,7 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
       min-height: 100vh;
       padding: 24px;
-      background-image: url('../../img/fondo-escencial.jpg');
+      background-image: url('../../img/one-fondograndecolor.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
@@ -390,13 +390,28 @@
         @media print {
             .btn-back { display: none !important; }
         }
+
+.one-logocolor {
+            display: block;
+            width: 250px;             /* Ancho limitado a 250px */
+            height: auto;             /* Altura automática para no deformar */
+            margin: 0 auto 30px auto; /* Centrado horizontal y margen inferior */
+            object-fit: contain;
+            filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1));
+            transition: transform 0.3s ease;
+        }
+
+        .one-logocolor:hover {
+            transform: scale(1.05);
+        }
+
     </style>
 
   <div class="container">
 
     <!-- Sección de Registro -->
     <div id="registerSection">
-      <img src="../../img/logo-escencial.png" alt="Logo Escencial" class="logo">
+      <img src="../../img/one-logocolor.png" alt="one-logocolor" class="one-logocolor">
 
       <div class="main-header">
         <h1>DNLA - Percepción Personal</h1>
@@ -428,7 +443,7 @@
 
     <!-- Sección de Cuestionario -->
     <div id="questionSection" class="hidden">
-      <img src="./img/escencial-logo.png" alt="Logo Escencial" class="logo">
+      <img src="../../img/one-logocolor.png" alt="one-logocolor" class="one-logocolor">
 
       <div class="progress-text">
         <span>Pregunta <span id="currentQuestion">1</span> de 24</span>
@@ -457,7 +472,7 @@
 
     <!-- Sección de Confirmación -->
     <div id="successSection" class="hidden">
-      <img src="../../img/logo-escencial.png" alt="Logo Escencial" class="logo">
+      <img src="../../img/one-logocolor.png" alt="one-logocolor" class="one-logocolor">
       <div class="success-message">
         <h2>✅ ¡Evaluación Completada!</h2>
         <p>Tus respuestas han sido enviadas correctamente.</p>
@@ -465,7 +480,6 @@
         </p>
       </div>
     </div>
-
   </div>
 
   <script>
