color y fondo actualziado del inicio

--- a/tests/dnla-sales/index.html
+++ b/tests/dnla-sales/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DNLA Perfil Comercial - Escencial Consultora</title>
+  <title>DNLA Perfil Comercial - ONE</title>
   <link rel="shortcut icon" href="../../img/favicon.png" type="image/png">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <style>
@@ -816,7 +816,7 @@
 
       } catch (error) {
         console.error('Error al enviar datos:', error);
-        alert('Hubo un error al enviar tus respuestas. Por favor, contacta con Escencial Consultora.');
+        alert('Hubo un error al enviar tus respuestas. Por favor, contacta con ONE.');
       }
     }
 
