--- a/usuarios.html
+++ b/usuarios.html
@@ -891,7 +891,7 @@ html {
         <div class="brand">
           <div class="brand-logo"></div>
           <div>
-            <div class="brand-text-main">Escencial Consultora</div>
+            <div class="brand-text-main">ONE</div>
             <div class="brand-text-sub">Panel de Evaluación</div>
           </div>
         </div>
