--- a/tests/toulouse/index.html
+++ b/tests/toulouse/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test de Toulouse-Piéron - Escencial Consultora</title>
+    <title>Test de Toulouse-Piéron - ONE</title>
     <link rel="shortcut icon" href="../../img/favicon.png" type="image/png">
     <style>
         /* ══════════════════════════════════════════════════════════
